# CompoNet

./: '  .flake8  .gitignore  .toml  Ceramic_Capacitors.json.dvc  DigiKey_API.ipynb  Get Categories.ipynb  JSON to CSV.ipynb  Octopart Curl to Python.ipynb  Octopart Scraper Sandbox.ipynb  Octopart_Download.ipynb  README.md  aluminum_electrolytic_categories.py  data.dvc  query_no_seller.txt
.dvc/: config
_digikey_cache/: token_storage.json
_digikey_cache_prod/: token_storage.json
boost/: .slugignore  app.ts  package-lock.json  package.json  tsconfig.json
boost/client/: .gitignore  Cargo.toml  build.rs  package-lock.json  package.json  tailwind.config.js
boost/client/.cargo/: config.toml
boost/client/src/: Alert.tsx  App.tsx  Dropdown.tsx  Form.tsx  Navbar.tsx  Point.tsx  Trace.tsx  index.tsx  lib.rs  parse.ts  react-app-env.d.ts  sql.js
boost/client/src/css/: main.css
boost/client/src/hooks/: useOutsideClick.ts
boost/client/src/interface/: Alert.tsx  App.tsx  Dropdown.tsx  ExportButton.tsx  Form.tsx  Point.tsx  Trace.tsx
boost/client/src/interface/plot/: consts.ts
boost/client/src/json/: columns.json  properties.json
boost/client/src/metadata/: attributes.json  categories.json  columns.json
boost/client/src/pages/: ContactPage.tsx  HomePage.tsx
boost/client/src/proto/: componet.graph.proto  componet.metadata.proto  componet.proto
boost/client/src/proto/ts/: componet.graph.ts  componet.metadata.ts  componet.ts
boost/client/src/types/: plotly.d.ts  plotly.js-basic-dist-min.d.ts
boost/client/src/utils/: consts.ts  metadata.proto  octopart.ts  queries.ts  types.ts
boost/src/: App.tsx  Form.tsx  Navbar.tsx
boost/src/pages/: AboutPage.tsx  HomePage.tsx
data/capacitor/: products.json
experiments/: .gitignore  20220802_Inductors.json.dvc  20220802_MicaCapacitors.json.dvc  20220802_TantalumCapacitors.json.dvc  20220803_CapacitorArrays.json.dvc  20220803_FixedInductors.json.dvc  20220803_PolymerCapacitors.json.dvc  20220803_Transformers.json.dvc  20220803_VariableInductors.json.dvc  CLI Experiments.ipynb  DigiKey API Sandbox.ipynb  End to End CompoNet Sandbox.ipynb  End to End CompoNet.ipynb  Get Categories.ipynb  JSON to CSV.ipynb  Octopart Curl to Python.ipynb  Octopart Scraper Sandbox.ipynb  Postprocess.ipynb  data.dvc  query_categories.txt
experiments/digikey_survey/: RawData_Digikey.dvc  func_ParseCapacitorPages.m  func_ParseInductorPages.m  mainCapacitorSurvey.m  set_figure_style.m
linting/: lint.sh
passive_component_survey/: .gitignore  func_AggregatedCapacitorPages.m  func_ComputeEnergyDC.m  func_ComputeMass.m  func_paretoFront.m  func_removeOutliers.m  func_smoothConvHull.m
processor/: Preprocess Sanity Check.ipynb  Processor.ipynb  categories.py  ceramic_classes.csv  compute.py  upload.py
scraper/: Untitled.ipynb  __main__.py  categories.py  constants.py  metadata.py  octopart.py  params.py  queries.py  requirements.txt  scraper.py  utils.py
scraper2/: Cargo.toml
scraper2/src/: batch_manager.rs  categories.rs  cli.rs  config.rs  lib.rs  main.rs  request_sender.rs  response_handler.rs
scraper2/src/batch_manager/: attribute_manager.rs  mod.rs  types.rs
scraper2/src/batch_manager/fetch/: components.rs  counts.rs  mod.rs  tasks.rs
scraper2/src/batch_manager/fetch/attributes/: mod.rs
scraper2/src/batch_manager/fetch/components/: mod.rs  processor.rs
scraper2/src/batch_manager/fetch/counts/: metadata.rs  mod.rs  processor.rs
scraper2/src/batch_manager/request/: mod.rs  request_sender.rs  response_handler.rs
scraper2/src/cli/: mod.rs
scraper2/src/config/: categories.rs  constants.rs  mod.rs  prompts.rs  queries.rs
scraper2/src/data_manager/: mod.rs
