[package]
name = "scraper2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
log = "0.4"
anyhow = "1.0.75"
reqwest = { version = "^0.11.22", features = ["json", "cookies"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4.1", features = ["derive"] }
dialoguer = "0.10.4"
phf = { version = "0.11.2", features = ["macros"] }
tqdm = "0.6.0"
