[package]
edition = "2021"
name = "scraper2"
version = "0.1.0"


[dependencies]
anyhow = "1.0.75"
async-trait = "0.1"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.1", features = ["derive"] }
colored = "2"
dialoguer = "0.10.4"
env_logger = "0.10.1"
futures = "0.3"
indicatif = "0.17.7"
log = "0.4"
once_cell = "1.18.0"
phf = { version = "0.11.2", features = ["macros"] }
reqwest = { version = "^0.11.22", features = ["cookies", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
