[package]
name = "componet"
version = "0.1.0"
authors = ["Shalin Shah <shalinvs@gmail.com>"]
description = "Passive component survey tool."
license = "MIT/Apache-2.0"
repository = "https://github.com/shalins/componet"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2.80"
js-sys = "^0.3.6"
serde_json = "^1.0.91"
prost = "^0.11.6"

