[package]
name = "componet"
version = "0.1.0"
authors = ["Shalin Shah <shalinvs@gmail.com>"]
description = "Passive component survey tool."
license = "MIT/Apache-2.0"
repository = "https://github.com/shalins/componet"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2.84"
js-sys = "^0.3.6"
serde_json = "^1.0.91"
serde = { version = "^1.0.152", features = ["derive"] }
prost = "^0.11.6"
lazy_static = "^1.4.0"
web-sys =  { version = "^0.3.6", features = ["console"] }
console_error_panic_hook = "^0.1.7"

[build-dependencies]
prost-build = { version = "^0.11.6" }

# Turn this on, otherwise stack traces will use function names
# such as `wasm-function[123]` which are not very useful.
# https://rustwasm.github.io/docs/book/reference/debugging.html
[profile.release]
debug = true

[profile.dev]
debug = true

[profile.bench]
debug = true
