[package]
authors = ["Shalin Shah <shalinvs@gmail.com>"]
description = "Passive component survey tool."
edition = "2018"
license = "MIT/Apache-2.0"
name = "componet"
repository = "https://github.com/shalins/componet"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "^0.1.7"
js-sys = "^0.3.6"
lazy_static = "^1.4.0"
prost = "^0.11.6"
serde = { version = "^1.0.152", features = ["derive"] }
serde_json = "^1.0.91"
wasm-bindgen = "^0.2.84"
web-sys = { version = "^0.3.6", features = ["console"] }

[build-dependencies]
prost-build = { version = "^0.11.6" }

# Turn this on, otherwise stack traces will use function names
# such as `wasm-function[123]` which are not very useful.
# https://rustwasm.github.io/docs/book/reference/debugging.html
[profile.release]
debug = true

[profile.dev]
debug = true

[profile.bench]
debug = true
